@@ -34,6 +34,7 @@
 - redone freq filter builders as classes
 - redone im_fwfft(), im_invfft(), im_freqflt(), im_disp_ps(), im_fractsurf(),
   im_phasecor() as classes
+- vips_colourspace() allows B_W as a target/source
 
 9/1/14 started 7.36.6
 - fix some clang compiler warnings
